[U] 修改了获取用户位置权限

--- a/project.config.json
+++ b/project.config.json
@@ -22,7 +22,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.2",
-	"appid": "wx79ed69f1cdf2d63d",
+	"appid": "wxf9f159fd28e0d463",
 	"projectname": "Wxweather_self",
 	"debugOptions": {
 		"hidedInDevtools": []
