--- a/app.json
+++ b/app.json
@@ -2,6 +2,11 @@
   "pages": [
     "pages/index/index"
   ],
+  "permission":{
+    "scope.userLocation": {
+      "desc": "需要获取你的所在位置"
+    }
+  },
   "window": {
     "backgroundTextStyle": "dark",
     "backgroundColor": "#A7CAD3",
