--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "backgroundTextStyle": "dark",
     "backgroundColor": "#A7CAD3",
     "navigationBarBackgroundColor": "#A7CAD3",
-    "navigationBarTitleText": "Wx Weather",
+    "navigationBarTitleText": "小唐天气",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json"
